[gd_scene load_steps=8 format=2]

[ext_resource path="res://LoginBttn.gd" type="Script" id=1]
[ext_resource path="res://ui utility/Spark.jpg" type="Texture" id=2]
[ext_resource path="res://ui utility/edificios-en-ciudad-de-noche-con-iluminacion-neon-azul_1920x1080_xtrafondos.com.jpg" type="Texture" id=3]
[ext_resource path="res://addons/simple-gui-transitions/materials/transform.tres" type="Material" id=4]
[ext_resource path="res://addons/simple-gui-transitions/example/theme.tres" type="Theme" id=5]
[ext_resource path="res://VBoxContainer.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[node name="LoginScreen" type="Control"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.00292969
anchor_right = 1.00293
anchor_bottom = 0.993333
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -198.0
margin_top = 73.0
margin_right = 228.0
margin_bottom = 332.0

[node name="Titulo" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 426.0
margin_bottom = 47.0
text = "Login Screen
"
align = 1

[node name="NombreUsuario" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 51.0
margin_right = 426.0
margin_bottom = 73.0
text = "Nombre de Usuario"

[node name="In_Usuario" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 77.0
margin_right = 426.0
margin_bottom = 109.0

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/VBoxContainer"]
margin_top = 113.0
margin_right = 426.0
margin_bottom = 117.0

[node name="Contraseña" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 121.0
margin_right = 426.0
margin_bottom = 143.0
text = "Contraseña"

[node name="In_Contrasena" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 147.0
margin_right = 426.0
margin_bottom = 179.0
max_length = 15
secret = true

[node name="HSeparator2" type="HSeparator" parent="NinePatchRect/VBoxContainer"]
margin_top = 183.0
margin_right = 426.0
margin_bottom = 187.0

[node name="LoginBttn" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 191.0
margin_right = 426.0
margin_bottom = 225.0
text = "Login"
script = ExtResource( 1 )

[node name="RegisterRedi" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 229.0
margin_right = 426.0
margin_bottom = 263.0
text = "Register"

[node name="Node2D" type="Node2D" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="Node2D"]
margin_right = 1025.0
margin_bottom = 599.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/NinePatchRect"]
margin_left = 77.0
margin_top = 42.0
margin_right = 963.0
margin_bottom = 556.0
theme = SubResource( 1 )
script = ExtResource( 6 )

[node name="textoNumero" type="Label" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_right = 886.0
margin_bottom = 22.0
text = "Número: "
valign = 2
__meta__ = {
"_editor_description_": ""
}

[node name="numeroBase" type="Label" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 26.0
margin_right = 886.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 78 )

[node name="Button" type="Button" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 52.0
margin_right = 886.0
margin_bottom = 86.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 169, 97.002 )

[node name="Button2" type="Button" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 90.0
margin_right = 886.0
margin_bottom = 124.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 169, 97.002 )

[node name="Button3" type="Button" parent="Node2D/NinePatchRect/VBoxContainer"]
margin_top = 128.0
margin_right = 886.0
margin_bottom = 162.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 169, 97.002 )
